--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,6 @@
 @import "main-screen";
 @import "about";
 @import "modal-order";
+@import "modal-successes";
+@import "programs";
+@import "feedback";
