--- a/source/sass/about.scss
+++ b/source/sass/about.scss
@@ -85,6 +85,10 @@
   .about {
     margin-top: -12px;
     padding-bottom: 85px;
+    background-image: url("../img/programs-bg-phone.png");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    background-position: right 0 top 0;
   }
 
   .about__text {
@@ -99,6 +103,8 @@
   .about__video-container {
     position: relative;
     width: 100%;
+    height: auto;
+
   }
 
   .about__play {
@@ -112,11 +118,12 @@
     height: 80px;
   }
 
-  .small-screen {
-    display: block;
+
+  .about__video-pic:nth-child(1) {
+    display: none;
   }
 
-  .big-screen {
-    display: none;
+  .about__video-pic:nth-child(2) {
+    display: block;
   }
 }
