--- a/source/sass/feedback.scss
+++ b/source/sass/feedback.scss
@@ -4,10 +4,11 @@
   padding-left: 15.2%;
   padding-right: 15%;
   padding-top: 215px;
-  background-image: url("../img/form@1x-desktop.png");
+  background-image: url("../img/form@1x-desktop.png"),
+      url("../img/feedback-bg-bag-desktop.png");
   background-repeat: no-repeat;
-  background-position: top 0 right 0;
-  background-size: 817px 594px;
+  background-position: top 0 right 0, left 0 top 150px;
+  background-size: 817px 594px, 147px 226px;
 }
 
 .feedback__title {
@@ -116,9 +117,10 @@
     padding-left: 4.7%;
     padding-right: 4.7%;
     padding-top: 77px;
-    background-image: url("../img/form@1x-phone.png");
-    background-position: bottom 0 right 0;
-    background-size: 320px 308px;
+    background-image: url("../img/form@1x-phone.png"),
+      url("../img/feedback-bg-bag-phone.png");
+    background-position: bottom 0 right 0, top 50px left 0;
+    background-size: 100% auto;
     background-repeat: no-repeat;
   }
 
@@ -141,11 +143,21 @@
     margin-bottom: 25px;
     font-size: 16px;
     line-height: 160%;
+    background-color: transparent;
+  }
+
+  .feedback__input {
+    width: 100%;
+    max-width: 350px;
+    margin: 0 auto;
+    margin-bottom: 8px;
+    opacity: 1;
   }
 
   .feedback__btn-submit {
     position: relative;
     width: 90%;
+    max-width: 320px;
     margin: 0 auto;
   }
 }
