--- a/source/sass/modal-successes.scss
+++ b/source/sass/modal-successes.scss
@@ -11,6 +11,7 @@
   background-repeat: no-repeat;
   background-size: 64px 66px;
   background-position: center 100px;
+  z-index: 1000;
 }
 
 .modal-successes__close-btn {
