--- a/source/sass/photos.scss
+++ b/source/sass/photos.scss
@@ -46,7 +46,7 @@
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  margin-top: -24px;
+  margin-top: -49px;
 }
 
 .photos__main {
@@ -160,6 +160,7 @@
   .photos {
     padding-left: 5%;
     padding-right: 5%;
+    padding-bottom: 2px;
   }
 
   .photos__title {
