--- a/source/sass/programs.scss
+++ b/source/sass/programs.scss
@@ -103,9 +103,9 @@
     position: relative;
     width: 100%;
     min-height: 480px;
-    padding-top: 0px;
-    padding-left: 4.8%;
-    padding-right: 4%;
+    padding-top: 0;
+    padding-left: 5%;
+    padding-right: 3%;
     overflow: hidden;
   }
 
