--- a/source/sass/terms.scss
+++ b/source/sass/terms.scss
@@ -170,6 +170,7 @@
     width: 100%;
     max-width: 400px;
     margin: 0 auto;
+    margin-bottom: 22px;
     padding-left: 4.9%;
     padding-right: 4.9%;
     font-size: 16px;
