--- a/source/sass/photos.scss
+++ b/source/sass/photos.scss
@@ -192,8 +192,8 @@
   }
 
   .photos__slider-item {
-    width: 100%;
-    max-width: 500px;
+    //width: 100%;
+    //max-width: 500px;
     height: auto;
     position: relative;
     display: none;
