--- a/source/sass/reviews.scss
+++ b/source/sass/reviews.scss
@@ -203,6 +203,8 @@
     background-image: url("../img/reviews-sketch-phone.png");
     background-size: 523px 318px;
     background-position: right 0 top 50%;
+    padding-left: 0%;
+    padding-right: 0%;
   }
 
   .reviews__title {
@@ -216,10 +218,12 @@
   }
 
   .slide__wrapper-left {
-    width: 100%;
-    padding-left: 12%;
-    padding-right: 12%;
-    margin-bottom: 30px;
+    //width: 100%;
+    width: 320px;
+    padding-left: 0%;
+    //padding-right: 12%;
+    margin: 0 auto;
+    margin-bottom: 35px;
   }
 
   .slide__wrapper-right {
@@ -233,12 +237,18 @@
 
   .slide__image--small-screen {
     display: block;
-    width: 304px;
+    width: 240px;
     margin: 0 auto;
+    height: 320px;
+  }
+
+  .slide__image {
+    width: 100%;
     height: auto;
   }
 
   .slide__content {
+    width: 100%;
     margin-bottom: 18px;
   }
 
@@ -247,7 +257,7 @@
   }
 
   .slide__program {
-    width: 400px;
+    width: 250px;
     font-size: 14px;
     line-height: 160%;
     margin-bottom: 20px;
@@ -283,9 +293,9 @@
   }
 
   .reviews__toggles .controls {
-    width: 30%;
+    width: 100px;
     position: absolute;
-    top: 53.9%;
+    top: 470px;
     left: calc(50% - 49px);
   }
 
