--- a/source/sass/about.scss
+++ b/source/sass/about.scss
@@ -88,7 +88,7 @@
     background-image: url("../img/programs-bg-phone.png");
     background-repeat: no-repeat;
     background-size: 100% auto;
-    background-position: right 0 top 0;
+    background-position: right 0 top 205px;
   }
 
   .about__text {
