--- a/source/sass/modal-successes.scss
+++ b/source/sass/modal-successes.scss
@@ -72,7 +72,7 @@
     display: none;
     width: 320px;
     min-height: 768px;
-    top: calc(50vh - 160px);
+    top: 0;
     left: calc(50vw - 160px);
     padding: 15px;
     padding-top: 24px;
