--- a/source/sass/_overall.scss
+++ b/source/sass/_overall.scss
@@ -22,13 +22,21 @@ h1, h2, h3 {
 
 .layout {
   display: none;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  //position: absolute;
+  //top: 0;
+  //bottom: 0;
+  //left: 0;
+  //right: 0;
+  //background-color: rgba(0, 0, 0, 0.5);
   z-index: 100;
+
+  position: fixed;
+  overflow: auto;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
 }
 
 
