--- a/source/sass/blogs.scss
+++ b/source/sass/blogs.scss
@@ -73,7 +73,14 @@
 }
 
 @media (max-width: $tablet-width) {
+  .blogs__wrapper {
+    right: 13%;
+    top: 20%;
+  }
 
+  .blogs__text {
+    margin-bottom: 15px;
+  }
 }
 
 @media (max-width: $mobile-width) {
