--- a/source/sass/details.scss
+++ b/source/sass/details.scss
@@ -187,12 +187,13 @@
   outline: none;
 }
 
-.details-form__small-name,
-.details-form__small-phone {
+.details-form__error-name,
+.details-form__error-phone {
   display: none;
   position: absolute;
   left: 30px;
   bottom: -15px;
+  color: red;
 }
 
 .details-form__input::-webkit-input-placeholder {/*WebKitbrowsers*/
@@ -243,21 +244,50 @@
 }
 
 @media (max-width: $tablet-width) {
+  .details__feedback-wrapper {
+    width: 100%;
+    flex-direction: column;
+  }
 
+  .details-form__wrapper {
+    padding-top: 30px;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .details-form__input {
+    width: 220px;
+  }
+
+  .details-form__submit {
+    width: 30%;
+  }
+
+  .details-form__input {
+  }
+
+  .details-form__btn {
+    width: 200px;
+  }
 }
 
 @media (max-width: $mobile-width) {
 
   .details {
+    width: 320px;
+    margin: 0 auto;
     padding-left: 5.5%;
     padding-right: 0%;
     padding-top: 75px;
     padding-bottom: 65px;
-    background-image: url("../img/details-map-phone@1x.png");
+    background-image: url("../img/icon-marker-map.svg"), url("../img/details-map-phone@1x.png")
+      ;
     background-repeat: no-repeat;
-    background-size: 320px 420px;
-    background-position: center 705px;
+    background-size: 28px 41px, 320px 420px;
+    background-position: right 10% top 910px,  center 705px;
   }
+
+
 
   .details__container {
     width: 100%;
@@ -309,7 +339,7 @@
   .details-form__header {
     width: 100%;
     margin-right: 1.5%;
-    margin-bottom: 34px;
+    margin-bottom: 4px;
   }
 
   .details-form__text {
@@ -390,7 +420,7 @@
   }
 
   .details-form__btn {
-    width: 91%;
-    margin: 0 auto;
+    width: 265px;
+    margin-left: 10px;
   }
 }
