--- a/source/sass/questions.scss
+++ b/source/sass/questions.scss
@@ -4,7 +4,8 @@
   padding-top: 120px;
   padding-left: 8.1%;
   padding-bottom: 95px;
-  background-image: url("../img/watercolor_Bg.png"),     url("../img/questions-bg-bag-desktop.png");
+  background-image: url("../img/watercolor_Bg.png"),
+    url("../img/questions-bg-bag-desktop.png");
   background-size: 100% 1119px, 153px 177px;
   background-position: bottom -50 left 0, left 0 bottom 0;
   background-repeat: no-repeat;
@@ -153,6 +154,12 @@
     padding-top: 85px;
     padding-left: 5%;
     padding-right: 5%;
+    padding-bottom: 80px;
+
+    background-image:  url("../img/questions-bg-bag-phone.png");
+    background-size:146px 177px;
+    background-position:left 0 bottom 150px;
+    background-repeat: no-repeat;
   }
 
   .questions__image {
