--- a/source/sass/photos.scss
+++ b/source/sass/photos.scss
@@ -240,6 +240,7 @@
     border-radius: 50%;
     background-color: $black-color;
     opacity: 0.2;
+    cursor: pointer;
   }
 
   .photos__controls-btn--active {
