--- a/source/sass/reviews.scss
+++ b/source/sass/reviews.scss
@@ -49,8 +49,8 @@
 
 .slide__content-reviews {
   width: 100%;
-  height: auto;
-  margin-bottom: 53px;
+  min-height: 440px;
+  margin-bottom: 0;
   padding-top: 3.4%;
   padding-left: 2.7%;
 }
